user-management-rollout/resources/dashboard/services/dashboard-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  labels:
    app: dashboard
    service: dashboard
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: dashboard
