user-management-rollout/resources/dashboard/services/dashboard-destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dashboard
spec:
  host: dashboard
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
