user-management-rollout/resources/dashboard/services/dashboard-virtual-svc.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: dashboard-virtual-service
spec:
  http:
    - route:
        - destination:
            host: dashboard
            subset: v1
          weight: 50
        - destination:
            host: dashboard
            subset: v2
          weight: 50
